# simple-wireguard-gui

./: AddServerPage.qml  CMakeLists.txt  Main.qml  README.md  ServerListPage.qml  main.cpp  serverlistmodel.cpp  serverlistmodel.h  sshcommands.cpp  sshcommands.h
